apps/goatlint/src/snapshots/_-A all fixtures__cli__linter@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: -A all fixtures/cli/linter
working directory: 
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 3 files with 0 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
